Bug 65381 - [sna] No usable configuration for screen
Summary: [sna] No usable configuration for screen
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-05 00:03 UTC by David Rosca
Modified: 2013-06-05 08:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log (10.46 KB, text/plain)
2013-06-05 00:03 UTC, David Rosca
no flags Details
xorg.conf (955 bytes, text/plain)
2013-06-05 00:05 UTC, David Rosca
no flags Details

Description David Rosca 2013-06-05 00:03:49 UTC
Created attachment 80313 [details]
Xorg log

I cannot use sna with current git, everything works fine with uxa. This problem is not present in 2.21.8 release.

My system is Thinkpad X220 with Sandy Bridge graphics.

I'm attaching my Xorg configuration and log.
Comment 1 David Rosca 2013-06-05 00:05:09 UTC
Created attachment 80314 [details]
xorg.conf
Comment 2 Chris Wilson 2013-06-05 08:20:20 UTC
commit 5d0ae71f1d667759ed4cfd2b7e793a08b8e3702c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jun 5 09:12:48 2013 +0100

    sna: Do not conflate ignoring an output with an allocation failure
    
    If the user explicitly ignores an output through xorg.conf, then
    xf86OutputCreate returns NULL. This is not to be confused with an
    allocation error that also returns NULL. The latter is terminal, the
    former is desired.
    
    Fixes regression from commit a9acc8dbb436e1e523e7d7c0f3c41946a2d0f245
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Thu May 30 12:09:52 2013 +0100
    
        sna: Cleanup up error reporting after failure to init KMS interface
    
    Reported-by: David Rosca <nowrep@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65381
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.