sna: Do not conflate ignoring an output with an allocation failure

If the user explicitly ignores an output through xorg.conf, then
xf86OutputCreate returns NULL. This is not to be confused with an
allocation error that also returns NULL. The latter is terminal, the
former is desired.

Fixes regression from commit a9acc8dbb436e1e523e7d7c0f3c41946a2d0f245
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu May 30 12:09:52 2013 +0100

    sna: Cleanup up error reporting after failure to init KMS interface

Reported-by: David Rosca <nowrep@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65381
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>